src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Division_Count__c</fullName>
        <description>Actual Division Count for a class</description>
        <inlineHelpText>Actual Division Count for a class</inlineHelpText>
        <label>Actual Division Count</label>
        <summaryForeignKey>Division__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Division_Count__c</fullName>
        <description>Number of divisions in a class/standard</description>
        <inlineHelpText>Number of divisions in a class/standard</inlineHelpText>
        <label>Division Count</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date from which this class is valid from</description>
        <inlineHelpText>End Date from which this class is valid from</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Release_Date__c</fullName>
        <description>Field Release Date from which this class is valid from</description>
        <inlineHelpText>Field Release Date from which this class is valid from</inlineHelpText>
        <label>Field Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date from which this class is valid from</description>
        <inlineHelpText>Start Date from which this class is valid from</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DivisionCountShouldNotBeLessThanActual</fullName>
        <active>true</active>
        <description>Division Count Should Not Be Less Than Actual Count</description>
        <errorConditionFormula>Division_Count__c  &lt;  Actual_Division_Count__c</errorConditionFormula>
        <errorDisplayField>Division_Count__c</errorDisplayField>
        <errorMessage>Division Count Should Not Be Less Than Actual Count</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_division_count_exceeds</fullName>
        <active>true</active>
        <description>Maximum division count can not exceed 10</description>
        <errorConditionFormula>Division_Count__c &gt; 10</errorConditionFormula>
        <errorDisplayField>Division_Count__c</errorDisplayField>
        <errorMessage>Maximum division count cannot exceed 10</errorMessage>
    </validationRules>
</CustomObject>